Added in build tools

--- a/modules/aws/Makefile
+++ b/modules/aws/Makefile
@@ -4,4 +4,10 @@ SHELL := /bin/bash
 
 prepare_terraform_environment:
 	@echo "--- Prepare Terraform Environment (This step must run on a Linux based OS) ---"
-	@./modules/aws/scripts/prepare-terraform-environment.sh $(PROJECT_CODE) $(REGION)
+	@./scripts/prepare-terraform-environment.sh $(PROJECT_CODE) $(REGION)
+
+.PHONY: deploy_environment_init_plan
+
+deploy_environment_init_plan:
+	@echo "--- Init and Plan for Environment Deploy (Docker and Compose must be installed) ---"
+	@docker-compose run --rm terraform init -backend-config="bucket=$(PROJECT_CODE)-terrastate"
