Confirmed Basic Init and Apply works. Additional permissions need to be granted

--- a/modules/aws/Makefile
+++ b/modules/aws/Makefile
@@ -6,8 +6,14 @@ prepare_terraform_environment:
 	@echo "--- Prepare Terraform Environment (This step must run on a Linux based OS) ---"
 	@./scripts/prepare-terraform-environment.sh $(PROJECT_CODE) $(REGION)
 
-.PHONY: deploy_environment_init_plan
+.PHONY: terraform_init_plan
 
-deploy_environment_init_plan:
-	@echo "--- Init and Plan for Environment Deploy (Docker and Compose must be installed) ---"
+terraform_init_plan:
+	@echo "--- Init and Plan for Terraform (Docker and Compose must be installed) ---"
 	@docker-compose run --rm terraform init -backend-config="bucket=$(PROJECT_CODE)-terrastate" -backend-config="key=foundations/" -backend-config="region=$(REGION)"
+
+.PHONY: terraform_apply
+
+terraform_apply:
+	@echo "--- Apply for Terraform (Docker and Compose must be installed) ---"
+	@docker-compose run --rm terraform apply -var project_code=$(PROJECT_CODE) -var "region=$(REGION)" -auto-approve
