--- a/modules/aws/Makefile
+++ b/modules/aws/Makefile
@@ -11,9 +11,10 @@ prepare_terraform_environment:
 terraform_init_plan:
 	@echo "--- Init and Plan for Terraform (Docker and Compose must be installed) ---"
 	@docker-compose run --rm terraform init -backend-config="bucket=$(PROJECT_CODE)-terrastate" -backend-config="key=foundations/" -backend-config="region=$(REGION)"
+	@docker-compose run --rm terraform plan -var project_code=$(PROJECT_CODE) -var "region=$(REGION)"
 
 .PHONY: terraform_apply
 
 terraform_apply:
-	@echo "--- Apply for Terraform (Docker and Compose must be installed) ---"
+	@echo "--- Apply for Terraform (Docker and Compose must be installed. The terraform_init_plan must be run first) ---"
 	@docker-compose run --rm terraform apply -var project_code=$(PROJECT_CODE) -var "region=$(REGION)" -auto-approve
