--- a/modules/aws/Makefile
+++ b/modules/aws/Makefile
@@ -8,16 +8,20 @@ prepare_terraform_environment:
 
 .PHONY: terraform_init_plan
 terraform_init_plan:
-	@echo "--- Init and Plan for Terraform (Docker and Compose must be installed) ---"
-	@docker-compose run --rm terraform init -backend-config="bucket=$(PROJECT_CODE)-terrastate" -backend-config="key=foundations/default.tfstate" -backend-config="region=$(REGION)"
+	@echo "--- Init and Plan for Terraform (Docker and Compose must be installed) --- $(STATEBUCKET)"
+	@docker-compose run --rm terraform init -backend-config="bucket=$(STATEBUCKET)" -backend-config="key=foundations/default.tfstate" -backend-config="region=$(REGION)"
 	@docker-compose run --rm terraform plan -var project_code=$(PROJECT_CODE) -var "region=$(REGION)"
 
 .PHONY: terraform_apply
 terraform_apply:
-	@echo "--- Apply for Terraform (Docker and Compose must be installed. The terraform_init_plan must be run first) ---"
+	@echo "--- Apply for Terraform (Docker and Compose must be installed) ---"
+	@docker-compose run --rm terraform init -backend-config="bucket=$(STATEBUCKET)" -backend-config="key=foundations/default.tfstate" -backend-config="region=$(REGION)"
+	@docker-compose run --rm terraform plan -var project_code=$(PROJECT_CODE) -var "region=$(REGION)"
 	@docker-compose run --rm terraform apply -var project_code=$(PROJECT_CODE) -var "region=$(REGION)" -auto-approve
 
 .PHONY: terraform_destory
 terraform_destroy:
+	@echo "--- Destroy for Terraform (Docker and Compose must be installed) ---"
+	@docker-compose run --rm terraform init -backend-config="bucket=$(STATEBUCKET)" -backend-config="key=foundations/default.tfstate" -backend-config="region=$(REGION)"
 	@echo "--- Apply for Terraform (Docker and Compose must be installed. The terraform_init_plan must be run first) ---"
 	@docker-compose run --rm terraform destroy -var project_code=$(PROJECT_CODE) -var "region=$(REGION)" -auto-approve
