--- a/modules/aws/Makefile
+++ b/modules/aws/Makefile
@@ -10,17 +10,17 @@ prepare_terraform_environment:
 terraform_init_plan:
 	@echo "--- Init and Plan for Terraform (Docker and Compose must be installed) --- $(STATEBUCKET)"
 	@docker-compose run --rm terraform init -backend-config="bucket=$(STATEBUCKET)" -backend-config="key=foundations/default.tfstate" -backend-config="region=$(REGION)"
-	@docker-compose run --rm terraform plan -var project_code=$(PROJECT_CODE) -var "region=$(REGION)"
+	@docker-compose run --rm terraform plan -var project_code=$(PROJECT_CODE) -var "region=$(REGION)" -var "statebucket=$(STATEBUCKET)"
 
-.PHONY: terraform_apply
-terraform_apply:
+.PHONY: terraform_init_apply
+terraform_init_apply:
 	@echo "--- Apply for Terraform (Docker and Compose must be installed) ---"
 	@docker-compose run --rm terraform init -backend-config="bucket=$(STATEBUCKET)" -backend-config="key=foundations/default.tfstate" -backend-config="region=$(REGION)"
-	@docker-compose run --rm terraform plan -var project_code=$(PROJECT_CODE) -var "region=$(REGION)"
-	@docker-compose run --rm terraform apply -var project_code=$(PROJECT_CODE) -var "region=$(REGION)" -auto-approve
+	@docker-compose run --rm terraform plan -var project_code=$(PROJECT_CODE) -var "region=$(REGION)" -var "statebucket=$(STATEBUCKET)"
+	@docker-compose run --rm terraform apply -var project_code=$(PROJECT_CODE) -var "region=$(REGION)" -var "statebucket=$(STATEBUCKET)" -auto-approve
 
-.PHONY: terraform_destory
-terraform_destroy:
+.PHONY: terraform_init_destory
+terraform_init_destroy:
 	@echo "--- Destroy for Terraform (Docker and Compose must be installed) ---"
 	@docker-compose run --rm terraform init -backend-config="bucket=$(STATEBUCKET)" -backend-config="key=foundations/default.tfstate" -backend-config="region=$(REGION)"
 	@echo "--- Apply for Terraform (Docker and Compose must be installed. The terraform_init_plan must be run first) ---"
