buildspec : fixing var reference

--- a/modules/aws/buildspec.yml
+++ b/modules/aws/buildspec.yml
@@ -10,4 +10,4 @@ phases:
   build:
     commands:
       - cd modules/aws
-      - make terraform_init_plan STATEBUCKET=$statebucket PROJECT_CODE=$projectcode REGION=region
+      - make terraform_init_plan STATEBUCKET=$statebucket PROJECT_CODE=$projectcode REGION=$region
