Removing debug code

--- a/modules/aws/Makefile
+++ b/modules/aws/Makefile
@@ -8,7 +8,7 @@ prepare_terraform_environment:
 
 .PHONY: terraform_init_plan
 terraform_init_plan:
-	@echo "--- Init and Plan for Terraform (Docker and Compose must be installed) --- $(STATEBUCKET)"
+	@echo "--- Init and Plan for Terraform (Docker and Compose must be installed) ---"
 	@docker-compose run --rm terraform init -backend-config="bucket=$(STATEBUCKET)" -backend-config="key=foundations/default.tfstate" -backend-config="region=$(REGION)"
 	@docker-compose run --rm terraform plan -var project_code=$(PROJECT_CODE) -var "region=$(REGION)" -var "statebucket=$(STATEBUCKET)"
 
