--- a/modules/aws/buildspec.yml
+++ b/modules/aws/buildspec.yml
@@ -5,10 +5,20 @@ env:
     projectcode: "projectcode"
     region: "region"
     statebucket: "statebucket"
+    infrarolearn: "infrarolearn"
             
 phases:
   build:
     commands:
       - cd modules/aws
-      - aws s3 ls
+      - ASSUME_ROLE_ARN="$infrarolearn"
+      - THIS_ROLE=`aws sts assume-role --role-arn $ASSUME_ROLE_ARN --role-session-name this`
+      - export THIS_ROLE
+      - echo $THIS_ROLE
+      - export AWS_ACCESS_KEY_ID=$(echo "${THIS_ROLE}" | jq -r '.Credentials.AccessKeyId')
+      - export AWS_SECRET_ACCESS_KEY=$(echo "${THIS_ROLE}" | jq -r '.Credentials.SecretAccessKey')
+      - export AWS_SESSION_TOKEN=$(echo "${THIS_ROLE}" | jq -r '.Credentials.SessionToken')
+      - echo $AWS_ACCESS_KEY_ID
+      - echo $AWS_SECRET_ACCESS_KEY
+      - echo $AWS_SESSION_TOKEN
       - make terraform_init_plan STATEBUCKET=$statebucket PROJECT_CODE=$projectcode REGION=$region
