--- a/modules/aws/docker-compose.yml
+++ b/modules/aws/docker-compose.yml
@@ -10,3 +10,4 @@ services:
         environment:
             - AWS_ACCESS_KEY_ID
             - AWS_SECRET_ACCESS_KEY
+            - AWS_SESSION_TOKEN
